--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "groceryapp",
     "version": "1.0.0",
+    "engines": {
+        "node": "14.17.6"
+    },
     "description": "",
     "main": "server/server.js",
     "scripts": {
@@ -14,5 +17,8 @@
     "license": "ISC",
     "devDependencies": {
         "concurrently": "^5.3.0"
+    },
+    "dependencies": {
+        "@apollo/react-hooks": "^4.0.0"
     }
 }
