--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "seed": "node seeds/seed.js",
-    "watch": "nodemon server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "apollo-server-express": "^2.19.0",
-    "express": "^4.17.1",
-    "graphql": "^15.5.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.6"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "engines": {
+        "node": "14.17.6"
+    },
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js",
+        "seed": "node seeds/seed.js",
+        "watch": "nodemon server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "apollo-server-express": "^2.19.0",
+        "express": "^4.17.1",
+        "graphql": "^15.5.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.11.6"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.6"
+    }
 }
