--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "dependencies": {
         "apollo-server-express": "^2.19.0",
+        "bcrypt": "^5.0.1",
         "express": "^4.17.1",
         "graphql": "^15.5.1",
         "jsonwebtoken": "^8.5.1",
