--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "concurrently": "^5.3.0"
     },
     "dependencies": {
-        "@apollo/react-hooks": "^4.0.0"
+        "@apollo/react-hooks": "^4.0.0",
+        "axios": "^0.24.0"
     }
 }
