--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "concurrently": "^5.3.0"
+        "concurrently": "^5.3.0",
+        "eslint-plugin-react-hooks": "^4.3.0"
     },
     "dependencies": {
-        "@apollo/react-hooks": "^4.0.0"
+        "@apollo/react-hooks": "^4.0.0",
+        "@auth0/auth0-react": "^1.8.0",
+        "react-json-pretty": "^2.2.0",
+        "typescript": "^4.5.4",
+        "eslint": "^6.6.0"
     }
 }
