--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.9",
+    "axios": "^0.24.0",
     "bootstrap": "^4.4.1",
     "graphql": "^15.8.0",
     "jwt-decode": "^2.2.0",
